가위바위보 결과창 추가

--- a/JS game/RSP game/RSP.html
+++ b/JS game/RSP game/RSP.html
@@ -28,6 +28,7 @@
         <button id="scissors" class="rsp">가위</button>
         <button id="paper" class="rsp">보</button>
     </div> 
+    <h1 id="result"></h1>
     <script src="RSP.js"></script>
 </body>
 </html>
