--- a/JS game/tic tac toe/ticTacToe.html
+++ b/JS game/tic tac toe/ticTacToe.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>틱택토</title>
     <style>
-        table {
+        div.board {
+            display: table;
             border-collapse: collapse;
+            user-select: none;
         }
 
-        td {
-            border: 1px solid black;
-            width: 50px;
-            height: 50px;
+        div.line {
+            display: table-row;
+        }
+
+        div.cell {
+            display: table-cell;
+            width: 100px;
+            height: 100px;
+            border: 2px solid black;
             font-weight: bold;
             text-align: center;
             font-size: 35px;
+            line-height: 100px;
         }
     </style>
 </head>
-<body> 
+
+<body>
+    <div class="board">
+        <div class="line">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="line">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="line">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+    </div>
+    <h1 id="result"></h1>
     <script src="ticTacToe.js"></script>
-    
 </body>
+
 </html>
