H-stone 다시 초기화

--- a/JS game/H-stone/h-stone.html
+++ b/JS game/H-stone/h-stone.html
@@ -1,90 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>흥푸 스톤 🃏</title>
-    <style>
-        div#game {
-            border: 1px solid black;
-            position: relative;
-            width: 804px;
-        }
-
-        div#board {
-            border: 2px solid black;
-            width: 800px;
-            position: relative;
-        }
-
-        button#turnEnd {
-            float: right;
-        }
-
-        div.hero {
-            width: 100px;
-            height: 150px;
-            background-color: white;
-            background-size: contain;
-            background-repeat: no-repeat;
-            margin: auto;
-            position: relative;
-        }
-
-        div.enemy.hero {
-            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhFj6pvB5BEoXxJs8hAv4H66C2hJ0OTtwBFA5cNtboviln4_by);
-        }
-
-        div.my.hero {
-            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSr_dwSaRP3MMS2D9r1MuI67OYSwIF5gVzrvkcDadXXhs-5EqlV);
-        }
-
-        div.hand {
-            height: 150px;
-        }
-
-        div.field {
-            height: 150px;
-        }
-
-        div.att {
-            text-align: center;
-            position: absolute;
-            font-size: 20px;
-            font-weight: bold;
-            text-align: center;
-            border: 1px solid black;
-            border-radius: 50%;
-        }
-
-        div.att.hp {
-            right: 0px;
-            bottom: 40px;
-            background-color: #e74c3c;
-        }
-    </style>
+    <title>Hngfu Stone 🃏</title>
 </head>
-
 <body>
-    <div id="game">
-        <div class="hand enemy"></div>
-        <div class="hero enemy">
-            <div class="att hp">30</div>
-        </div>
-        <div id="board">
-            <div class="field"></div>
-            <button id="turnEnd">턴 종료</button>
-            <hr>
-            <div class="field"></div>
-        </div>
-        <div class="hero my">
-            <div class="att hp">30</div>
-        </div>
-        <div class="hand my"></div>
-    </div>
-    <script src="h-stone.js"></script>
+    
 </body>
-
 </html>
