--- a/JS game/H-stone/h-stone.html
+++ b/JS game/H-stone/h-stone.html
@@ -19,6 +19,8 @@
             border: 1px solid black;
             width: 900px;
             height: 100px;
+            display: flex;
+            justify-content: center;
         }
 
         .hero {
@@ -43,6 +45,13 @@
             font-size: 16px;
             padding: 4px;
         }
+
+        .card {
+            width: 66px;
+            height: 100px;
+            float: left;
+            border: 1px solid black;
+        }
     </style>
 </head>
 
@@ -56,7 +65,11 @@
             <div class="field"></div>
         </div>
         <div class="my">
-            <div class="hand"></div>
+            <div class="hand">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+            </div>
             <div class="hero">나
                 <div class="hp">30</div>
             </div>
