--- a/node ground/rest/rest.html
+++ b/node ground/rest/rest.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>RESTful SERVER</title>
     <link rel="stylesheet" href="./rest.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
     </nav>
     <div>
-        <form id="form">
-            <input type="text" id="username">
-            <button type="submit">등록</button>
-        </form>
+      <form id="form">
+        <input type="text" id="username" />
+        <button type="submit">등록</button>
+      </form>
     </div>
     <div id="list"></div>
     <script src="./rest.js"></script>
-</body>
-
+  </body>
 </html>
